src/css/general.css
/* ... */
/* HOOD */
/* ===================== */
.hood {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
}
@media screen and (max-width: 768px) {
  .hood {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media screen and (max-width: 600px) {
  .hood {
    grid-template-columns: 1fr;
  }
}
@media screen and (max-width: 768px) {
  .hood__section-title {
    margin-bottom: 48px;
  }
}
@media screen and (max-width: 550px) {
  .hood__section-title {
    margin-bottom: 40px;
  }
}
.hood__item {
  border: 1px solid #fff;
  border-radius: 20px;
  padding: 32px 40px 32px 32px;

  background-color: #f5f5f7;
}
@media screen and (max-width: 768px) {
  .hood__item {
    display: flex;
    align-items: center;
  }
}
.hood__pic {
  width: 64px;
  height: 64px;
}
@media screen and (max-width: 768px) {
  .hood__pic {
    margin-right: 40px;
  }
  .section__move-faster .hood__pic {
    margin-right: 30px;
  }
}
.hood__title {
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  margin-top: 24px;
  color: #171717;
}
@media screen and (max-width: 768px) {
  .hood__title {
    margin-top: 0;
  }
}
@media screen and (max-width: 360px) {
  .hood__title br {
    display: none;
  }
}
.hood__pic--server {
  width: 74px;
  height: 64px;
}
/* Responsive */
.only_desktop {
  display: none;
}
@media screen and (min-width: 768px) {
  .only_desktop {
    display: inherit;
  }
}
@media screen and (min-width: 768px) {
  .only_mobile {
    display: none;
  }
}
/* Grid List */
.grid-list {
  display: grid;
  grid-template-columns: 1fr 0.66fr 1fr;
  grid-gap: 72px;
}
.grid-list .grid-item {
  text-align: center;
}
@media screen and (max-width: 1120px) {
  .grid-list {
    display: block;
    width: 336px;
    margin: 0 auto;
  }
}
@media screen and (max-width: 374px) {
  .grid-list {
    width: 300px;
  }
}

#contact-us-for-copy {
  opacity: 1;
  color: #ffffff;
  transition: color 0.2s;
}
#contact-us-for-copy:hover {
  opacity: 0.9;
}
.contact-modal {
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(57, 72, 115, 0.95);
  z-index: 2;
  width: 100%;
  min-height: 100%;
  display: flex;
  visibility: visible;
  justify-content: center;
  opacity: 1;
  transition: opacity 0.4s;
}
.contact-modal.hide {
  opacity: 0;
}
.contact-modal.not-visible {
  visibility: hidden;
}
.contact-modal .contact-modal__container {
  position: relative;
  margin: auto;
  padding: 56px;
  width: 516px;
  background: #FFFFFF;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  text-align: center;
}
.contact-modal .xmark {
  position: absolute;
  top: 28px;
  right: 28px;
  cursor: pointer;
}
.contact-modal .xmark:hover {
  opacity: 0.9;
}
.contact-modal h2 {
  font-weight: bold;
  font-size: 40px;
  line-height: 40px;
  margin-top: 0;
  margin-bottom: 20px;
}
.contact-modal p {
  max-width: 330px;
  font-size: 18px;
  line-height: 26px;
  color: #333333;
  margin: 0 auto;
}
.contact-modal p.success-desc {
  max-width: 350px;
  margin-bottom: 10px;
}
.contact-modal a {
  color: #2C5EF6;
}
.contact__form {
  display: flex;
  flex-direction: column;
  margin-top: 30px;
}
.form-submitted .contact__form {
  display: none;
}
.form-submitted .hide_on_success {
  display: none;
}
.form-success {
  display: none;
}
.form-submitted .form-success {
  display: block;
}
/* Contact */
.contact-modal .button {
  width: 100%;
  height: 64px;
  margin: 0;
  margin-top: 30px;
  font-weight: 600;
  font-size: 18px;
  line-height: 16px;
}
.contact__form-field {
  font-weight: 400;
  font-size: 18px;
  line-height: normal;
  color: #171717;
  box-sizing: border-box;
  padding: 24px;
  border-radius: 6px;
  background: #ffffff;
  height: 56px;
  outline: none;
  transition: 0.3s ease-out;
  border: 1px solid #d6d6d6;
  margin: 10px 0;
  -webkit-appearance: none;
}
input.contact__form-field {
  font-family: "Inter", serif;
  font-size: 16px;
  line-height: 16px;
  font-style: normal;
  font-weight: normal;
}
input.contact__form-field::placeholder {
  font-family: "Inter", serif;
  letter-spacing: -0.02em;
  font-size: 16px;
  line-height: 16px;
  font-style: normal;
  font-weight: normal;
  color: rgba(23, 23, 23, 0.5);
}
textarea.contact__form-field {
  font-family: "Inter", serif;
  letter-spacing: -0.02em;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: normal;
  height: 136px;
  color: #171717;
}
.contact__form-field:focus ~ .subscribe__form-submit {
  background-color: #2c5ef6;
}
.contact__form-field:hover:not(:focus) {
  border-color: #c6c6c6;
}
.contact__form-field:focus,
.contact__form-field:active {
  border-color: #2c5ef6;
  background-color: #fff;
}
.multi-icons {
  display: flex;
  align-items: center;
  justify-content: center;

  position: relative;
  margin: 40px;
}
.multi-icons__checkmark {
  position: absolute;
}
.multi-icons__checkmark svg {
  height: 40px;
  width: 40px;
}
.multi-icons__circle {
  border-radius: 50%;
  height: 96px;
  width: 96px;
  padding: 10px;
  background: #E6ECFE;
}
.multi-icons__circle-border {
  height: 96px;
  width: 96px;
  border-radius: 50%;
}
@media screen and (max-width: 550px) {
  .contact-modal .contact-modal__container {
    padding: 40px 24px;
    margin: auto 16px;
  }
  .contact-modal h2 {
    font-size: 32px;
    line-height: 40px;
    margin-bottom: 12px;
  }
  .contact-modal p {
    max-width: 295px;
    font-size: 16px;
    line-height: 24px;
  }
  .contact__form {
    margin-top: 30px;
  }
  .contact__form-field {
    border-radius: 6px;
  }
  textarea.contact__form-field {
    height: 104px;
  }
  .contact-modal p.success-desc {
    margin-bottom: 96px;
  }
  .multi-icons {
    margin: 90px auto 24px;
  }
}
@media screen and (max-width: 320px) {

}

